@@ -1,7 +1,7 @@
-JAVA_OPTS="-server -Xms256M -Xmx256M"
-BASE_PORT=7572
-BASE_STOP_PORT=6572
-ZK_PORT="9983"
+INT_JAVA_OPTS="-server -Xms256M -Xmx256M"
+BASE_PORT=8900
+BASE_STOP_PORT=9900
+ZK_PORT="2414"
 
 rebuild() {
 	echo "Rebuilding"
@@ -14,13 +14,8 @@ rebuild() {
 }
 
 setports() {
-	if [ "1" = "$1" ]; then
-		PORT="8983"
-	    STOP_PORT="7983"
-	else
- 		PORT="$(( $BASE_PORT + $1 ))"
-	        STOP_PORT="$(( $BASE_STOP_PORT + $1 ))"
-	fi
+  PORT="$(( $BASE_PORT + $1 ))"
+  STOP_PORT="$(( $BASE_STOP_PORT + $1 ))"
 }
 
 reinstall() {
